# Begriff

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_EN.md  README_PT.md  alembic.ini  build.ps1  create_mock_model.py  docker-compose.yml  render.yaml  requirements.txt  test.db
data/samples/: transacoes.csv
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: BaseUI.jsx  Login.jsx
frontend/src/hooks/: useAuth.js  useUiData.js
frontend/src/layout/: Layout.jsx
frontend/src/services/: api.js
frontend/src/utils/: formatters.js  selectors.js
frontend/src/views/: pages.jsx
infra/nginx/: nginx.conf
infra/postgresql/: security_hardening.sql
src/app/: config.py  main.py
src/app/controllers/: analysis_controller.py  auth_controller.py  open_banking_controller.py  report_controller.py  twin_controller.py
src/app/middleware/: __init__.py  rate_limit.py  security.py
src/domains/: exceptions.py
src/domains/edge_computing/: nodes.py  orchestrator.py
src/domains/identity/: dependencies.py
src/domains/identity/services/: auth_service.py
src/domains/insights/services/: carbon_service.py  digital_twin_service.py  generative_ai_service.py  reporting_service.py
src/domains/insights/simulators/: digital_twin_simulator.py
src/domains/middleware/: CMakeLists.txt  Dockerfile  crypto.cpp  reconciliation.cpp
src/domains/open_banking/providers/: mock_bank_provider.py
src/domains/open_banking/services/: sync_service.py
src/domains/risk/models/: autoencoder_v1.keras  fraud_model_v1.pkl  scaler.pkl
src/domains/risk/services/: fraud_service.py
src/domains/transactions/copybooks/: recon-sum.cpy  transaction_record.cpy
src/domains/transactions/engine/: reconcile.cbl  transaction_processor.cbl
src/domains/transactions/services/: analysis_service.py  custom_json_encoder.py
src/infra/blockchain/: auditor_service.py
src/infra/blockchain/contracts/: AuditTrail.json  AuditTrail.sol
src/infra/blockchain/node/: Dockerfile  package.json
src/infra/blockchain/scripts/: deploy.py
src/infra/gateways/performance_gateway/: CMakeLists.txt  Dockerfile  build.bat
src/infra/gateways/performance_gateway/include/: gateway.hpp
src/infra/gateways/performance_gateway/src/: gateway.cpp
src/infra/mocks/open_banking_provider/: Dockerfile
src/infra/mocks/open_banking_provider/app/: data_generator.py  main.py  models.py
src/infra/mocks/open_banking_provider/data/: br_bancodobrasil.json  br_bradesco.json  br_caixa.json  br_inter.json  br_itau.json  br_mercadopago.json  br_nubank.json  br_santander.json  br_sicoob.json  br_xp.json  ch_ubs.json  cn_icbc.json  sg_dbs.json  uk_hsbc.json  uk_revolut.json  us_chase.json  us_jpmorgan.json
src/infra/persistence/: database.py  models.py
src/infra/persistence/migrations/: env.py
src/infra/persistence/repositories/: analysis_repository.py  user_repository.py
src/infra/shared/schemas/: analysis_schema.py  digital_twin_schema.py  open_banking_schema.py  transaction_schema.py  ui_schema.py  user_schema.py
tests/: e2e.py
tests/integration/: test_analysis_controller.py
tools/scripts/: create_mock_model.py
(+1 files in other folders)
